Help updates Oct 21

--- a/deploy/runtime/help/html/generic_system_plant.htm
+++ b/deploy/runtime/help/html/generic_system_plant.htm
@@ -39,7 +39,7 @@
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
 <p class="p_Text"><span class="f_Text">The Power Plant page allows you to specify the electricity output of the generic power system either as a nameplate capacity and capacity factor, or using time series data from other simulation software or measurements from an installed system.</span></p>
-<p class="p_Text"><span class="f_Text">After running simulations, you can see the hourly energy values in the <a href="tabular_data_browser.htm" class="topiclink">Tables</a> or <a href="base_case_time_series.htm" class="topiclink">time series graphs</a> on the <a href="results_page.htm" class="topiclink">Results</a> page.</span></p>
+<p class="p_Text"><span class="f_Text">After running simulations, you can see the hourly energy values in the <a href="data.htm" class="topiclink">Tables</a> or <a href="dview_timeseries.htm" class="topiclink">time series graphs</a> on the <a href="results_page.htm" class="topiclink">Results</a> page.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Nameplate Capacity</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The system's nameplate electrical capacity in electric kilowatts.</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">SAM uses the nameplate capacity to calculate capacity-based costs that you specify in $/kW on the <a href="generic_system_costs.htm" class="topiclink">Generic System Costs</a> page, and also to calculate the capacity factor when you run the generic system model in user-specified generation profile mode.</span></p>
