--- a/deploy/runtime/help/html/manage_cases.htm
+++ b/deploy/runtime/help/html/manage_cases.htm
@@ -38,26 +38,25 @@
 
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
-<p class="p_Text"><span class="f_Text">A case is a complete set of input data and results. A project file contains at least one case. SAM uses tabs to display each case in the project, analogous to the way Excel displays worksheets in a workbook.</span></p>
-<p class="p_Text"><span class="f_Text">SAM indicates the active case name in bold type:</span></p>
-<p class="p_Text"><img src="ss_mainwindow-casetabsactive.gif" width="555" height="78" alt="SS_MainWindow-CaseTabsActive" style="border:none" /></p>
-<p class="p_Note"><span class="f_CHInterfaceElement">Note.</span><span class="f_Note"> The number of cases that a project file can contain depends on the storage and computing resources available on your computer. SAM displays a warning if you try to add more than six cases to your project. Your computer may be able to handle projects with more than six cases, but for the model to run efficiently, it is best to keep the number of cases to less than seven.</span></p>
+<p class="p_Text"><span class="f_Text">A case is a complete set of input data and results. A project file contains at least one case. SAM uses tabs to display each case in the file, analogous to the way Excel displays worksheets in a workbook.</span></p>
+<p class="p_Text"><span class="f_Text">SAM highlights the active case name:</span></p>
+<p class="p_Text"><img src="ss_mainwindow-casetabsactive.gif" width="676" height="161" alt="SS_MainWindow-CaseTabsActive" style="border:none" /></p>
 <h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Why Use Cases?</span></h3>
 <p class="p_Text"><span class="f_Text">By creating more than one case in a file, you can easily compare the assumptions and results of different analysis scenarios. For example, you could use cases to compare the cost and performance of a residential photovoltaic system in several locations by defining a separate case for each location, or you could compare a utility-scale photovoltaic and concentrating solar power systems.</span></p>
-<h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Creating and Deleting Cases</span></h3>
-<p class="p_Text"><span class="f_Text">To add, remove, and rename cases, used the four commands on the Case menu:</span></p>
-<p class="p_Text"><img src="ss_menu-casecreate.gif" width="304" height="141" alt="SS_Menu-CaseCreate" style="border:none" /></p>
-<p class="p_VariableName"><span class="f_VariableName">Create Case</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Adds a new case to the project file. SAM displays the <a href="choose_performance_financial.htm" class="topiclink">Technology and Market window</a> for you to choose options for the case.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Rename Case</span></p>
+<p class="p_Note"><span class="f_CHNote">Tip.</span><span class="f_Note"> You can use the <a href="inputs_browser.htm" class="topiclink">inputs browser</a> to compare values of input variables in different cases.</span></p>
+<h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Creating, Renaming, and Deleting Cases</span></h3>
+<p class="p_TitleProcedure"><span class="f_TitleProcedure">To create a new case in your file:</span></p>
+<div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_ProcedureStepLast">Click New.</span></td></tr></table></div><p class="p_ProcedureStepNoNumber"><img src="ss_mainwindow-casecreate.gif" width="662" height="128" alt="SS_MainWindow-CaseCreate" style="border:none" /></p>
+<p class="p_TitleProcedure"><span class="f_TitleProcedure">To add, remove, and rename a case:</span></p>
+<div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_ProcedureStepLast">Click the </span><img src="ss_button-contextarrow.gif" width="28" height="28" alt="SS_Button-ContextArrow" style="border:none" /> <span class="f_ProcedureStepLast">arrow to display the <a href="case_menu.htm" class="topiclink">case menu</a> and click a command.</span></td></tr></table></div><p class="p_ProcedureStepNoNumber"><img src="ss_mainwindow-casemenu.gif" width="667" height="415" alt="SS_MainWindow-CaseMenu" style="border:none" /></p>
+<p class="p_VariableName"><span class="f_VariableName">Rename</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Change the label identifying the case that appears on the case tab.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Duplicate Case</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Creates a copy of the active case, with a duplicate set of input parameters and results.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Delete Case</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Deletes the active case. You can also delete a case by clicking the 'x' on the case's tab.</span></p>
-<p class="p_Definition"><img src="ss_mainwindow-casedeletecase.gif" width="555" height="78" alt="SS_MainWindow-CaseDeleteCase" style="border:none" /></p>
-<p class="p_Text"><span class="f_Text">For projects with more cases than can be displayed on tabs, the scroll and list controls allow you to access all of the cases in the project.</span></p>
-<p class="p_Text"><img src="ss_mainwindow-casetabsscroll.gif" width="546" height="135" alt="SS_MainWindow-CaseTabsScroll" style="border:none" /></p>
+<p class="p_VariableName"><span class="f_VariableName">Duplicate</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Create a copy of the active case, with a duplicate set of input parameters and results.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Delete</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Delete the active case.</span></p>
+<p class="p_Text"><span class="f_Text">For a file with more cases than can fit on the toolbar, click the ellipses to show a list of cases that do not fit:</span></p>
+<p class="p_Text"><img src="ss_mainwindow-casetabsscroll.gif" width="844" height="162" alt="SS_MainWindow-CaseTabsScroll" style="border:none" /></p>
 
 </td></tr></table>
 
