--- a/deploy/runtime/help/html/mt_gross_to_net_conv_factor.htm
+++ b/deploy/runtime/help/html/mt_gross_to_net_conv_factor.htm
@@ -40,7 +40,7 @@
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
 <p class="p_Text"><span class="f_Text">For CSP systems, SAM displays the ratio of the system's annual AC electric output to the power block's gross electric output. The difference between the two is due to parasitic losses from electric loads in the solar field and power block for pumps, cooling equipment, etc.</span></p>
 <p class="p_EquationExcel"><span class="f_EquationExcel">Gross to Net Conv Factor = Net Electric Output (kWh) / Gross Electric Output (kWh)</span></p>
-<p class="p_Text"><span class="f_Text">Where</span><span class="f_Emphasis"> Net Electric Output</span><span class="f_Text"> and </span><span class="f_Emphasis">Gross Electric Output</span><span class="f_Text"> are reported under Single Values in the <a href="tabular_data_browser.htm" class="topiclink">Tables</a>.</span></p>
+<p class="p_Text"><span class="f_Text">Where</span><span class="f_Emphasis"> Net Electric Output</span><span class="f_Text"> and </span><span class="f_Emphasis">Gross Electric Output</span><span class="f_Text"> are reported under Single Values in the <a href="data.htm" class="topiclink">Tables</a>.</span></p>
 
 </td></tr></table>
 
