--- a/deploy/runtime/help/html/mtf_minimum_dscr.htm
+++ b/deploy/runtime/help/html/mtf_minimum_dscr.htm
@@ -40,7 +40,7 @@
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
 <p class="p_Text"><span class="f_Text">The minimum DSCR is the minimum debt-service coverage ratio that SAM calculates for projects with the Commercial PPA or Utility IPP financing option that you choose on the <a href="choose_performance_financial.htm" class="topiclink">Technology and Market</a> window.</span></p>
 <p class="p_Note"><span class="f_CHNote">Note.</span><span class="f_Note"> For the advanced utility financing options with project debt (single owner and leveraged partnership flip) SAM assumes a constant coverage ratio that you specify on the Financing page.</span></p>
-<p class="p_Text"><span class="f_Text">The debt-service coverage ratio in each year </span><span class="f_CHEquationVariable">n</span><span class="f_Text"> is the ratio of operating income to expenses in that year (SAM displays these values in the <a href="base_case_cashflow.htm" class="topiclink">cash flow</a> table):</span></p>
+<p class="p_Text"><span class="f_Text">The debt-service coverage ratio in each year </span><span class="f_CHEquationVariable">n</span><span class="f_Text"> is the ratio of operating income to expenses in that year (SAM displays these values in the <a href="cashflow.htm" class="topiclink">cash flow</a> table):</span></p>
 <p class="p_Equation"><img src="eq_dscr.gif" width="206" height="39" alt="EQ_DSCR" style="border:none" /></p>
 <p class="p_Text"><span class="f_Text">Where,</span></p>
 <div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 0px;"><table class="WhereTable" style="border:none; border-spacing:0px;">
