--- a/deploy/runtime/help/html/mtp_annual_water_usage.htm
+++ b/deploy/runtime/help/html/mtp_annual_water_usage.htm
@@ -43,7 +43,7 @@
 <p class="p_EquationExcel"><span class="f_EquationExcel">Annual Water Usage (m³) = Cooling Water Usage (m³) + Mirror Washing Water Usage (m³)</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The mirror washing water usage is based on the mirror washing parameters you specify on the Solar Field or Heliostat Field page:</span></p>
 <p class="p_EquationExcel"><span class="f_EquationExcel">Mirror Washing Usage = Water Usage per Wash (L/m², aperture) × Total Aperture or Reflective Area (m²) × Washes per Year (1/year)</span></p>
-<p class="p_Text"><span class="f_Text">SAM reports the annual mirror washing usage as a Single Values variable in <a href="tabular_data_browser.htm" class="topiclink">Tables</a> and <a href="graphs_and_charts.htm" class="topiclink">Graphs</a>. It also reports the cooling water flow rate in Tables as an hourly variable (&quot;water makeup flow rate&quot; or &quot;water consumption mass flow rate&quot;).</span></p>
+<p class="p_Text"><span class="f_Text">SAM reports the annual mirror washing usage as a Single Values variable in <a href="data.htm" class="topiclink">Tables</a> and <a href="graphs.htm" class="topiclink">Graphs</a>. It also reports the cooling water flow rate in Tables as an hourly variable (&quot;water makeup flow rate&quot; or &quot;water consumption mass flow rate&quot;).</span></p>
 
 </td></tr></table>
 
