--- a/deploy/runtime/help/html/run_simulations.htm
+++ b/deploy/runtime/help/html/run_simulations.htm
@@ -38,16 +38,10 @@
 
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
-<p class="p_Text"><span class="f_Text">After <a href="input_pages.htm" class="topiclink">reviewing and modifying inputs</a> on the input pages, click the Run all Simulations button to run simulations:</span></p>
-<p class="p_Text"><img src="ss_mainwindow-runallsimulationsbutton.gif" width="160" height="75" alt="SS_MainWindow-RunAllSimulationsButton" style="border:none" /></p>
-<p class="p_Text"><span class="f_Text">SAM runs simulations based on the values of input variables that appear on the input pages and reports those values as &quot;base case&quot; results.</span></p>
-<p class="p_Text"><span class="f_Text">In addition to the base case, SAM runs simulations for any additional simulations you may have set up on the Configure Simulations pages, such as <a href="parametric.htm" class="topiclink">parametric</a> or <a href="sensitivity_analysis.htm" class="topiclink">sensitivity</a> analyses.</span></p>
-<p class="p_Text"><span class="f_Text">You can also run simulations from the Case menu (See <a href="menus.htm" class="topiclink">Menus</a> for a description of menu commands):</span></p>
-<p class="p_Text"><img src="ss_menu-case.gif" width="304" height="255" alt="SS_Menu-Case" style="border:none" /></p>
-<p class="p_VariableName"><span class="f_VariableName">Run All Simulations</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Runs all of the simulations configured in the current case. Equivalent to clicking the Run button.</span></p>
-<p class="p_VariableName"><span class="f_VariableName">Run Base Case Only</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Runs a single simulation based on the input values shown on the input pages, ignoring any parametric, sensitivity, or other configurations requiring multiple simulation runs.</span></p>
+<p class="p_Text"><span class="f_Text">After <a href="input_pages.htm" class="topiclink">reviewing and modifying inputs</a> on the input pages, click </span><span class="f_CHInterfaceElement">Simulate</span><span class="f_Text"> to run simulations:</span></p>
+<p class="p_Text"><img src="ss_mainwindow-runallsimulationsbutton.gif" width="264" height="117" alt="SS_MainWindow-RunAllSimulationsButton" style="border:none" /></p>
+<p class="p_Text"><span class="f_Text">You can also run simulations from the Case menu or by pressing the F5 key:</span></p>
+<p class="p_Text"><img src="ss_mainwindow-menusimulate.gif" width="412" height="224" alt="SS_MainWindow-MenuSimulate" style="border:none" /></p>
 
 </td></tr></table>
 
