--- a/deploy/runtime/help/html/shw_results.htm
+++ b/deploy/runtime/help/html/shw_results.htm
@@ -38,7 +38,7 @@
 
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
-<p class="p_Text"><span class="f_Text">After running simulations, SAM displays hourly results for the solar water heating model on the Results page <a href="tabular_data_browser.htm" class="topiclink">Tables</a> and <a href="base_case_time_series.htm" class="topiclink">Time Series</a> graphs.</span></p>
+<p class="p_Text"><span class="f_Text">After running simulations, SAM displays hourly results for the solar water heating model on the Results page <a href="data.htm" class="topiclink">Tables</a> and <a href="dview_timeseries.htm" class="topiclink">Time Series</a> graphs.</span></p>
 <p class="p_Note"><span class="f_CHNote">Notes.</span><span class="f_Note"> </span><br />
 <span class="f_Note">&nbsp;</span><br />
 <span class="f_Note">For simulations that involve time-of-delivery pricing, results include additional variables described in <a href="time_dependent_pricing.htm" class="topiclink">Savings and Revenue</a>.</span></p>
