--- a/deploy/runtime/help/html/weather_viewer.htm
+++ b/deploy/runtime/help/html/weather_viewer.htm
@@ -39,7 +39,7 @@
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
 <p class="p_Text"><span class="f_Text">SAM displays summary data from a weather file. If you want to see the weather data itself, you can use the weather data viewer to display data from the weather file.</span></p>
-<p class="p_Text"><span class="f_Text">To learn about the weather data viewer controls, see <a href="base_case_time_series.htm" class="topiclink">Time Series Data Viewer</a>.</span></p>
+<p class="p_Text"><span class="f_Text">To learn about the weather data viewer controls, see <a href="dview_timeseries.htm" class="topiclink">Time Series Data Viewer</a>.</span></p>
 <p class="p_TitleProcedure"><span class="f_TitleProcedure">To open the current weather file in the data viewer:</span></p>
 <div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 24px;"><table border="0" cellpadding="0" cellspacing="0" style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr valign="baseline" style="vertical-align:baseline"><td style="border:none;width:24px"><span style="font-size:10pt; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;">&#8226;</span></td><td style="border:none"><span class="f_ProcedureStepLast">Click </span><span class="f_CHInterfaceElement">View Hourly Data</span><span class="f_ProcedureStepLast">.</span></td></tr></table></div><p class="p_ProcedureStepNoNumber"><img src="ss_climate-weather-data-viewer.gif" width="528" height="396" alt="SS_Climate-weather-data-viewer" style="border:none" /></p>
 <p class="p_Text"><span class="f_Text">&nbsp;</span></p>
