Help updates Oct 22

--- a/deploy/runtime/help/html/samhelp_content.htm
+++ b/deploy/runtime/help/html/samhelp_content.htm
@@ -128,7 +128,7 @@
 </li>
 <li class="heading2" id="i4.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a4.2" href="weather_viewer.htm" target="hmcontent"><span class="heading2" id="s4.2">Weather Data Viewer</span></a>
 </li>
-<li class="heading2" id="i4.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a4.3" href="weather_location_lookup.htm" target="hmcontent"><span class="heading2" id="s4.3">Download Weather File</span></a>
+<li class="heading2" id="i4.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a4.3" href="download_weather_file.htm" target="hmcontent"><span class="heading2" id="s4.3">Download Weather File</span></a>
 </li>
 <li class="heading2" id="i4.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a4.4" href="weather_web.htm" target="hmcontent"><span class="heading2" id="s4.4">Find Weather Data Online</span></a>
 </li>
