--- a/deploy/runtime/help/html/window_weather_data_settings.htm
+++ b/deploy/runtime/help/html/window_weather_data_settings.htm
@@ -38,7 +38,7 @@
 
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
-<p class="p_Text"><span class="f_Text">The Weather Data Settings window allows you to choose <a href="weather_manage_folders.htm" class="topiclink">weather file folders</a> where SAM looks for weather files, and where it saves weather files that you download from the web with the <a href="weather_location_lookup.htm" class="topiclink">Download Weather File</a> feature.</span></p>
+<p class="p_Text"><span class="f_Text">The Weather Data Settings window allows you to choose <a href="weather_manage_folders.htm" class="topiclink">weather file folders</a> where SAM looks for weather files, and where it saves weather files that you download from the web with the <a href="download_weather_file.htm" class="topiclink">Download Weather File</a> feature.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Weather File Folders</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The list of folders on your computer that SAM searches for weather files. </span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">SAM lists any files with an extension that it recognizes as a weather file (.tm2, .csv, .srw, .smw, .epw) in the list of weather files on weather file input page.</span></p>
@@ -47,7 +47,7 @@
 <p class="p_VariableName"><span class="f_VariableName">Remove</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Click a folder in the weather file folder list and click Remove to remove the folder.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Folder for Downloaded Weather Files</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">When you use the <a href="weather_location_lookup.htm" class="topiclink">Download Weather File</a> feauture to download weather data from an online database, SAM stores the weather file in the folder that you specify.</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">When you use the <a href="download_weather_file.htm" class="topiclink">Download Weather File</a> feauture to download weather data from an online database, SAM stores the weather file in the folder that you specify.</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">The folder can be the same as a folder listed under </span><span class="f_CHInterfaceElement">Weather File Folders</span><span class="f_VariableDescription">, or a different folder.</span></p>
 <p class="p_Text"><span class="f_Text">&nbsp;</span></p>
 <p class="p_Text"><span class="f_Text">&nbsp;</span></p>
