--- a/deploy/runtime/help/html/case_menu.htm
+++ b/deploy/runtime/help/html/case_menu.htm
@@ -38,7 +38,7 @@
 
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
-<p class="p_Text"><span class="f_Text">The case menu displays commands for the current case. </span><span class="f_ProcedureStepLast">Click the </span><img src="ss_button-contextarrow.gif" width="28" height="28" alt="SS_Button-ContextArrow" style="border:none" /> <span class="f_ProcedureStepLast">arrow to display the case menu.</span></p>
+<p class="p_Text"><span class="f_Text">The case menu displays commands for the current case. </span><span class="f_ProcedureStepLast">Click the </span><img src="ss_button-contextarrow.gif" width="28" height="28" alt="SS_Button-ContextArrow" style="border:none" /> <span class="f_ProcedureStepLast">arrow on the case tab to display the menu.</span></p>
 <div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 6px 0px;"><table class="DefaultNoBorder" style="width:100%; border:none; border-spacing:0px;">
 <tr style="text-align:left;vertical-align:top;">
 <td style="vertical-align:top; width:335px; padding:2px;"><p class="p_Term"><img src="ss_menu-case.gif" width="275" height="356" alt="SS_Menu-Case" style="border:none" /></p>
@@ -62,8 +62,10 @@
 <p class="p_Term"><span class="f_Term">Change model</span></p>
 <p class="p_Definition"><span class="f_Definition">Change the performance model, financial model, or both for the current case.</span></p>
 <p class="p_Definition"><span class="f_Definition">When you change one model, SAM retains the input values of the other model and assigns default values to the inputs of the model you changed. For example, if you change a PVWatts/Residential case to Detailed Photovoltaic/Residential, SAM keeps the Residential financial model's inputs, and changes the performance model to detailed photovoltaic with its default values.</span></p>
-<p class="p_Term"><span class="f_Term">Reset inputs to default values</span></p>
+<p class="p_Definition"><span class="f_Definition">Reset inputs to default values</span></p>
 <p class="p_Definition"><span class="f_Definition">Replaces all inputs variable values with default values.</span></p>
+<p class="p_Term"><span class="f_Term">Excel exchange</span></p>
+<p class="p_Definition"><span class="f_Definition">Configure the case for <a href="excel_exchange.htm" class="topiclink">Excel Exchange</a> to exchange input variable values with a Microsoft Excel workbook.</span></p>
 </td>
 </tr>
 </table>
