Help update Nov 14

--- a/deploy/runtime/help/html/file_formats.htm
+++ b/deploy/runtime/help/html/file_formats.htm
@@ -48,7 +48,7 @@
 <p class="p_VariableName"><span class="f_VariableName">JPG</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Graphics file format used to export graph images.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">LK</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Text file containing <a href="scripting.htm" class="topiclink">LK script</a> for automating SAM analyses.</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Text file containing <a href="macros.htm" class="topiclink">LK script</a> for automating SAM analyses.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">PNG</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Graphics file format used to export graph images.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">SAM</span></p>
