--- a/deploy/runtime/help/html/menus.htm
+++ b/deploy/runtime/help/html/menus.htm
@@ -46,7 +46,7 @@
 <td style="vertical-align:top; padding:2px;"><p class="p_Term"><span class="f_Term">New project</span></p>
 <p class="p_Definition"><span class="f_Definition">Create a new project file using default input values. SAM opens a project with a single case and no results.</span></p>
 <p class="p_Term"><span class="f_Term">New script</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Open the script editor for a new new <a href="scripting.htm" class="topiclink">LK script</a>.</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Open the script editor for a new new <a href="macros.htm" class="topiclink">LK script</a>.</span></p>
 <p class="p_Term"><span class="f_Term">Open project</span></p>
 <p class="p_Definition"><span class="f_Definition">Open an existing SAM project file (</span><span class="f_CHFileName">.sam</span><span class="f_Definition">) file.</span></p>
 <p class="p_Term"><span class="f_Term">Open script</span></p>
