--- a/deploy/runtime/help/html/samhelp_content.htm
+++ b/deploy/runtime/help/html/samhelp_content.htm
@@ -130,7 +130,7 @@
 </li>
 <li class="heading2" id="i3.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.10" href="libraries.htm" target="hmcontent"><span class="heading2" id="s3.10">Libraries</span></a>
 </li>
-<li class="heading2" id="i3.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.11" href="scripting.htm" target="hmcontent"><span class="heading2" id="s3.11">Macros and Scripting</span></a>
+<li class="heading2" id="i3.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.11" href="macros.htm" target="hmcontent"><span class="heading2" id="s3.11">Macros and Scripting</span></a>
 </li>
 <li class="heading2" id="i3.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.12" href="sdk.htm" target="hmcontent"><span class="heading2" id="s3.12">Software Development Kit</span></a>
 </li>
@@ -516,33 +516,31 @@
 </li>
 <li class="heading1" id="i23" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a23" href="financial_metrics.htm" target="hmcontent"><span class="heading1" id="s23" ondblclick="return dblclicked(this)">Financial Metrics</span></a>
 <ul id="ul23" style="list-style-type:none">
-<li class="heading2" id="i23.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.1" href="mtf_costs.htm" target="hmcontent"><span class="heading2" id="s23.1">Project Costs</span></a>
+<li class="heading2" id="i23.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.1" href="mtf_debt_and_equity.htm" target="hmcontent"><span class="heading2" id="s23.1">Debt and Equity</span></a>
 </li>
-<li class="heading2" id="i23.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.2" href="mtf_debt_and_equity.htm" target="hmcontent"><span class="heading2" id="s23.2">Debt and Equity</span></a>
+<li class="heading2" id="i23.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.2" href="mtf_debt_fraction.htm" target="hmcontent"><span class="heading2" id="s23.2">Debt Fraction</span></a>
 </li>
-<li class="heading2" id="i23.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.3" href="mtf_debt_fraction.htm" target="hmcontent"><span class="heading2" id="s23.3">Debt Fraction</span></a>
+<li class="heading2" id="i23.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.3" href="mtf_financing_cost.htm" target="hmcontent"><span class="heading2" id="s23.3">Financing Cost</span></a>
 </li>
-<li class="heading2" id="i23.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.4" href="mtf_financing_cost.htm" target="hmcontent"><span class="heading2" id="s23.4">Financing Cost</span></a>
+<li class="heading2" id="i23.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.4" href="mtf_revenues.htm" target="hmcontent"><span class="heading2" id="s23.4">Electricity Cost and Savings</span></a>
 </li>
-<li class="heading2" id="i23.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.5" href="mtf_revenues.htm" target="hmcontent"><span class="heading2" id="s23.5">Electricity Cost and Savings</span></a>
+<li class="heading2" id="i23.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.5" href="mtf_irr.htm" target="hmcontent"><span class="heading2" id="s23.5">Internal Rate of Return (IRR)</span></a>
 </li>
-<li class="heading2" id="i23.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.6" href="mtf_irr.htm" target="hmcontent"><span class="heading2" id="s23.6">Internal Rate of Return (IRR)</span></a>
+<li class="heading2" id="i23.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.6" href="mtf_land_area.htm" target="hmcontent"><span class="heading2" id="s23.6">Land Area</span></a>
 </li>
-<li class="heading2" id="i23.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.7" href="mtf_land_area.htm" target="hmcontent"><span class="heading2" id="s23.7">Land Area</span></a>
+<li class="heading2" id="i23.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.7" href="mtf_lcoe.htm" target="hmcontent"><span class="heading2" id="s23.7">Levelized Cost of Energy (LCOE)</span></a>
 </li>
-<li class="heading2" id="i23.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.8" href="mtf_lcoe.htm" target="hmcontent"><span class="heading2" id="s23.8">Levelized Cost of Energy (LCOE)</span></a>
+<li class="heading2" id="i23.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.8" href="mtf_lppa.htm" target="hmcontent"><span class="heading2" id="s23.8">Levelized PPA Price (LPPA Price)</span></a>
 </li>
-<li class="heading2" id="i23.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.9" href="mtf_lppa.htm" target="hmcontent"><span class="heading2" id="s23.9">Levelized PPA Price (LPPA Price)</span></a>
+<li class="heading2" id="i23.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.9" href="mtf_npv.htm" target="hmcontent"><span class="heading2" id="s23.9">Net Present Value (NPV)</span></a>
 </li>
-<li class="heading2" id="i23.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.10" href="mtf_npv.htm" target="hmcontent"><span class="heading2" id="s23.10">Net Present Value (NPV)</span></a>
+<li class="heading2" id="i23.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.10" href="mtf_payback.htm" target="hmcontent"><span class="heading2" id="s23.10">Payback Period</span></a>
 </li>
-<li class="heading2" id="i23.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.11" href="mtf_payback.htm" target="hmcontent"><span class="heading2" id="s23.11">Payback Period</span></a>
+<li class="heading2" id="i23.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.11" href="mtf_ppa_price.htm" target="hmcontent"><span class="heading2" id="s23.11">PPA Price</span></a>
 </li>
-<li class="heading2" id="i23.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.12" href="mtf_ppa_price.htm" target="hmcontent"><span class="heading2" id="s23.12">PPA Price</span></a>
+<li class="heading2" id="i23.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.12" href="mtf_ppa_escalation.htm" target="hmcontent"><span class="heading2" id="s23.12">PPA Price Escalation</span></a>
 </li>
-<li class="heading2" id="i23.13" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.13" href="mtf_ppa_escalation.htm" target="hmcontent"><span class="heading2" id="s23.13">PPA Price Escalation</span></a>
-</li>
-<li class="heading2" id="i23.14" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.14" href="mtf_real_estate_added_value.htm" target="hmcontent"><span class="heading2" id="s23.14">Real Estate Value Added</span></a>
+<li class="heading2" id="i23.13" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a23.13" href="mtf_costs.htm" target="hmcontent"><span class="heading2" id="s23.13">Project Costs</span></a>
 </li>
 </ul>
 </li>
